# How-I-Built-a-Smart-In-Car-Media-Discovery-System

./: .gitignore  README.md  app.py  architecture.md  pyproject.toml  requirements.txt
scripts/: prepare_dataset.py
src/: audio_player.py  config.py  icon_loader.py  ingest.py  player.py  search.py  voice.py
