[project]
name = "cartune"
version = "0.1.0"
description = "Smart In-Car Media Discovery System — Voice-powered song search using Qdrant Edge, Whisper & FastEmbed"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "qdrant-edge-py>=0.6.0",
    "fastembed>=0.4.0",
    "openai-whisper>=20231117",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "streamlit>=1.30.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "scipy>=1.11.0",
    "pydub>=0.25.1",
    "mutagen>=1.47.0",
]

[project.scripts]
cartune-ingest = "src.ingest:run_ingestion"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
